clusters/corpus/_disabled/project-zomboid/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: project-zomboid
  namespace: games
spec:
  selector:
    matchLabels:
      app: project-zomboid
  serviceName: project-zomboid
  replicas: 0 # active longhorn-gameserver
  template:
    metadata:
      labels:
        app: project-zomboid
    spec:
      # initContainers:
      #   - name: project-zomboid-init
      #     image: ubuntu
      #     command:
      #       - bash
      #       - -c
      #       - |
      #           chmod 777 -R /server-data && \
      #           chmod 777 -R /server-files && \
      #           chown 1000:1000 /server-data -R && \
      #           chown 1000:1000 /server-files -R && \
      #           chown 1000:1000 /server-data/lost+found -R && \
      #           chown 1000:1000 /server-files/lost+found -R
      #     volumeMounts:
      #       - name: project-zomboid-data
      #         subPath: data
      #         mountPath: /server-data
      #       - name: project-zomboid-data
      #         subPath: files
      #         mountPath: /server-files
      containers:
        - name: project-zomboid
          image: afey/zomboid:latest # there is only the latest tag
          # command: ["tail","-f","/dev/null"]
          ports:
            - containerPort: 8766
              name: data1
              protocol: UDP
            - containerPort: 8767
              name: data2
              protocol: UDP
            - containerPort: 16261
              name: data3
              protocol: UDP
          volumeMounts:
            - name: project-zomboid-data
              subPath: data
              mountPath: /server-data
            - name: project-zomboid-data
              subPath: files
              mountPath: /server-files
          resources:
            limits:
              memory: 3Gi # was 16Gi, normally 12
            requests:
              cpu: 250m
          securityContext:
            fsGroup: 1000
        - name: filebrowser
          image: filebrowser/filebrowser:v2
          args: ["-d", "/db/database.db"]
          ports:
            - containerPort: 80
              name: fb-http
              protocol: TCP
          volumeMounts:
            - name: project-zomboid-data
              subPath: filebrowser
              mountPath: /db
            - name: project-zomboid-data
              mountPath: /srv/server-data
      volumes:
        - name: project-zomboid-files-config
          configMap:
            name: project-zomboid-files-config
        - name: project-zomboid-data
          persistentVolumeClaim:
            claimName: project-zomboid-data-longhorn-gameserver
